# OpenTrickler-v2

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  README.md  ai_tuning.c  and_scale_calibrate.c  app.cpp  app_v2.4.0.uf2  charge_mode.cpp  charge_mode.h  common.c  common.h  create_combined_bin.py  create_combined_image.py  create_combined_uf2.py  http_rest.c  http_rest.h  lwipopts.h  mini_12864_module.cpp  mini_12864_module.h  motors.c  neopixel_led.c  profile.c  rest_app_control.c  rest_app_control.h  rest_endpoints.c  src_CMakeLists.txt  wireless.c  wireless.h
.github/workflows/: build.yml  cmake.yml
OpenTrickler_AI_Files_v1.17/: CMakeLists.txt  app.cpp  lwipopts.h  rest_endpoints.c
OpenTrickler_AI_Files_v1.17/ota/: CMakeLists.txt  README.txt  ota.c  ota.h  ota_upload.py  rest_ota.c  rest_ota.h
html/: styles.css  web_portal.html  web_portal_basic.html
lvgl_ui/: lvgl_port.cpp  lvgl_port.h  ui_ai_tuning.cpp  ui_charge_input.cpp  ui_charge_mode.cpp  ui_cleanup_mode.cpp  ui_common.cpp  ui_common.h  ui_main_menu.cpp  ui_profile_select.cpp  ui_settings.cpp
scripts/: bin2header.py  css2header.py  gen_version.py
src/: FloatRingBuffer.cpp  access_point_mode.c  cat24c256_eeprom.c  cleanup_mode.cpp  configuration.h  display.c  eeprom.c  eeprom.h  http_rest.c  input_validation.h  lwipopts_examples_common.h  motors.h  mui_menu.c  radwag_scale.c  rest_endpoints.h  scale.c  servo_gate.c
src/bootloader/: CMakeLists.txt  bootloader.c
src/firmware_update/: crc32.c  firmware_manager.c  firmware_upload.c
targets/: pico2_w.h  raspberrypi_pico_w_config.h
tft35/: lv_conf.h  tft35_display.cpp  tft35_display.h  tft35_module.cpp  tft35_module.h  tft35_touch.cpp  tft35_touch.h
wifi-test-working/: CMakeLists.txt  FreeRTOSConfig_examples_common.h  picow_access_point.c  wifi_config.h
